--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@mozilla/readability": "^0.4.3",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.14",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "eventsource-parser": "^1.0.0",
+    "jsdom": "^21.1.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
