--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.36.0",
